# Aquarius

./: CMakeLists.txt  ChangeLog.txt
batch/: debug_x86_01_build.bat  debug_x86_02_deployqt.bat  x86_01_build.bat  x86_02_deployqt.bat
src/: AquariusContants.h  CMakeLists.txt  main.cpp
src/bookData/: BookInfo.cpp  BookInfo.h  BookListCtrl.cpp  BookListCtrl.h  BookListGeneral.cpp  BookListGeneral.h  BookListInfo.cpp  BookListInfo.h  BookListThumbnail.cpp  BookListThumbnail.h  BookListView.cpp  BookListView.h
src/formFiles/: MainWindow.ui
src/mainUI/: EpubManager.cpp  EpubManager.h  MainWindow.cpp  MainWindow.h
src/misc/: SettingData.cpp  SettingData.h
src/resFiles/: resources.qrc
